# service_agent

./: LICENSE  README.md  pyproject.toml  requirements.txt
bank_service_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: agent.py  app.py  config.py  tools.py
tests/: test_google_api.py  test_proxy.py
